Resolve overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@
 body {
   margin: 0;
   background-color: var(--main-bg-color8);
+  width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body * {
@@ -232,11 +236,16 @@ body * {
   clear: both;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  width: 100%;
 }
 
 .more-articles div {
   padding: 20px;
   justify-content: center;
+}
+
+.more-articles article {
+  width: 70%
 }
 
 .web-tech div {
@@ -266,7 +275,7 @@ body * {
 }
 
 .more-articles div article h1 {
-  width: 300px;
+  width: 50%;
   height: 20px;
   background-color: var(--main-bg-color2);
 }
@@ -627,13 +636,13 @@ body * {
 }
 
 .more-articles div article p:first-child {
-  width: 150px;
+  width: 40%;
   height: 10px;
   background-color: var(--main-bg-color4);
 }
 
 .more-articles div article p:nth-child(n+3) {
-  width: 500px;
+  width: 100%;
   height: 15px;
   background-color: var(--main-bg-color6);
 }
